--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "整理全网最全PHP常用开发函数,",
     "type": "library",
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "zhengbingdong/php-tools-function": "^1.1.2"
     },
     "autoload": {
         "psr-4": {
